* 0.9.10 9/5/2006
    - Bill Shupp (hostmaster@shupp.org)
        - Update CREDITS
        - Fix php notice in records.php
        - Fix default soa records problems

* 0.9.9.6 7/31/2006
    - Bill Shupp (hostmaster@shupp.org)
        - Add serial record support

* 0.9.9.5 7/18/2006
    - Bill Shupp (hostmaster@shupp.org)
        - Fix typo in line 60 that generated a warning

* 0.9.9.4 7/5/2006
    - Bill Shupp (hostmaster@shupp.org)
        - Fix problems in add_account_now and import_domains

* 0.9.9.3 6/15/2006
    - Bill Shupp (hostmaster@shupp.org)
        - Re-add md5() in authenticate_user().  Its removal broke logins in
            0.9.9.2. Doh.
        - Remove mysql escapes inside md5() for changing passwords, which would
            break logins for passwords with escapable characters.
        - Update version numbers this time.

* 0.9.9.2 6/14/2006
    - Bill Shupp (hostmaster@shupp.org)
        - Fixe wrong mail() argument in domains.php

        - Added Robin Bowes changes
            - Change error_reporting to E_ALL
            - Add "-R" to the tcpclient command.
            - Add quotes to md5() function when creating default password.
                -tnx Bob Hutchinson.
            - Lots of undefined index error fixes
            - Removed MD5 function from query in authenticate_user function

* 0.9.9.1 9/7/2005
    - Backported changes from 1.1.5:
        * SECURITY *
        - Fix path disclosure warning due to illegal "_" in session_name
        * SECURITY *
        - Moved all messages into _SESSION['message'], accessed via the 
          set_msg(), set_msg_err(), and display_msg() functions
    - Backported changes from 1.1.4:
        - Moved session_start.php code into index.php
        - Fix order of alphanumeric listing searches - tnx ringo@vianet.ca

* 0.9.9 12/4/2004
    - Bill Shupp (hostmaster@shupp.org)
        - Update Smarty to 2.6.7
        - remove src link in md5upgrade directory.  Use ini_set() instead